added graphics and basic structure

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ li {
 }
 
 body {
-  font-family: "Host Grotesk", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-style: normal;
   background-color: var(--normal-black);
   position: relative;
